ppt 3 update
